--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Gui Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Gui Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -44,7 +44,17 @@ else()
     endif()
 endif()
 
-target_link_libraries(auto-click PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+add_library(qhotkey
+    QHotkey/qhotkey.h QHotkey/qhotkey_p.h
+    QHotkey/qhotkey.cpp QHotkey/qhotkey_win.cpp)
+
+target_link_libraries(qhotkey
+    PRIVATE
+    Qt5::Core Qt5::Gui)
+
+target_link_libraries(auto-click
+    PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets qhotkey)
 
 set_target_properties(auto-click PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
